--- a/.github/workflows/mkdocs-pages.yml
+++ b/.github/workflows/mkdocs-pages.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # need history for git log timestamps
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
@@ -29,12 +31,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Generate Posts index + Latest Post
+        run: python scripts/gen_posts.py
       - name: Build site
         run: mkdocs build --strict
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./site
+
 
   deploy:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
