--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,9 +9,13 @@ theme:
   favicon: assets/logo.jpg
   features:
     - content.code.copy
+    - naviagtion.sections
+    - toc.follow
+    - content.tags
 
 plugins:
   - search
+
 
 markdown_extensions:
   - meta
@@ -24,4 +28,14 @@ nav:
       - Archive: posts/archive.md
   - About: about.md
 
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/matthiasblomme
+      name: GitHub
+    - icon: fontawesome/brands/linkedin
+      link: https://www.linkedin.com/in/matthiasblomme/
+      name: LinkedIn
 
+extra_css:
+  - assets/extra.css
